--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "googleapis": "^105.0.0"
+    "googleapis": "^105.0.0",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -21,6 +22,7 @@
     "@types/node": "^18.6.5",
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19",
+    "sqlite3": "^5.0.11",
     "typescript": "^4.7.4"
   }
 }
